src/objects/Client_Identification__c.object
<CustomObject>
    <fields>
        <fullName>Check_During_Dedup_Process__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check During Dedup Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Client Identification</relationshipLabel>
        <relationshipName>Client_Identification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Document__c</fullName>
        <label>Identification Document</label>
        <picklist>
            <picklistValues>
                <fullName>Voters Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ration Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Client Identification</label>
    <nameField>
        <displayFormat>CIID-{0000000000}</displayFormat>
        <label>Client Identification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Identification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>